# echo-server

./: Cargo.toml  LICENSE  README.md
sql/: create-conversations.sql  create-messages.sql  create-user.sql  create-users.sql  verify-user.sql
sql/tables/: messages.sql  users.sql
src/: api.rs  auth.rs  data.rs  database.rs  handle.rs  lib.rs  main.rs  pass.rs  request.rs  requests.rs  settings.rs  tls.rs
src/api/: request.rs  response.rs
src/sql/: create-conversation-1.sql  create-conversation-2.sql  create-message.sql  create-user.sql  read-conversation.sql  read-message.sql  read-user.sql
src/sql/tables/: conversations.sql  drop.sql  messages.sql  participants.sql  users.sql
