[package]
name = "echo-server"
version = "0.1.0"
authors = ["mzyzc <mzyzc@czyz.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = [ "attributes" ] }
base64 = "0.13"
dotenv = "0.15"
sqlx = { version = "0.4.2", features = [ "runtime-async-std-rustls", "postgres" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
